paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.compile.log
error[E0308]: `if` and `else` have incompatible types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:16:9
   |
13 |       let vf = if is_v0 {
   |  ______________-
14 | |         Box::new(move |x: i32| seed + x + 1000)
   | |         ---------------------------------------
   | |         |        |
   | |         |        the expected closure
   | |         expected because of this
15 | |     } else {
16 | |         Box::new(move |x: i32| seed + x - 2000)
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Box<{closure@target.rs:14:18}>`, found `Box<{closure@target.rs:16:18}>`
17 | |     };
   | |_____- `if` and `else` have incompatible types
   |
   = note: expected struct `Box<{closure@benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:14:18: 14:31}>`
              found struct `Box<{closure@benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:16:18: 16:31}>`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.